--- a/scss/_medios.scss
+++ b/scss/_medios.scss
@@ -1,4 +1,4 @@
-// Pantallas anchas
+// pantallas anchas
 
 @media(min-width: 1400px){
     nav, .servicios, .footer-content, .presentacion{
@@ -8,7 +8,7 @@
 }
 
 
-// Pantallas media
+// pantallas media
 
 @media(max-width:992px){
     .presentacion, .tipo-servicios{
@@ -32,7 +32,7 @@
 }
 
 
-// Pantallas chicas
+// pantallas chicas
 
 @media(max-width:420px){
 
